--- a/src/api/v1/projects.json
+++ b/src/api/v1/projects.json
@@ -1,14 +1,26 @@
 [
   {
     "id":1,
-    "name":"project-shawn1"
+    "name":"project-shawn1",
+    "startDate":"2019.01.01",
+    "endDate":"2019.02.01",
+    "percent":"100%",
+    "state":"완료"
   },
   {
     "id":2,
-    "name":"project-shawn2"
+    "name":"project-shawn2",
+    "startDate":"2019.02.01",
+    "endDate":"2019.03.01",
+    "percent":"80%",
+    "state":"진행중"
   },
   {
     "id":3,
-    "name":"project-shawn3"
+    "name":"project-shawn3",
+    "startDate":"2019.03.01",
+    "endDate":"2019.04.01",
+    "percent":"0%",
+    "state":"예정"
   }
 ]
