--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "chart.js": "^2.7.3",
     "css-loader": "1.0.0",
-    "d3": "^5.9.1",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.6.0",
@@ -45,6 +45,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.1",
     "react-app-polyfill": "^0.2.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.8.1",
     "react-google-login": "^5.0.2",
